--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+  <tr>
+    <th>Roll numbers</th>
+    <th>Names</th>
+  
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>Jyoti</td>
+   
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Teju</td>
+    
+  </tr>
+</table>
+<ol>
+	<li>
+		<img src="https://picsum.photos/id/123/200/300" alt="water drop"
+	</li>
+	<li>
+		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Big buck bunny" controls>
+			
+		</video>
+	</li>
+	<li>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="Lepidoptera" controls></audio>
+	</li>
+	
+</ol>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
